// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package rpc;

import "google/api/annotations.proto";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SendTransaction(Bytes)returns (Response) {
    option (google.api.http) = {
              post: "/v1/SendTransaction"
              body: "*"
    };
  }
  rpc GetAccount(Address)returns (Response) {
    option (google.api.http) = {
      post: "/v1/GetAccount"
      body: "*"
    };
  }
  rpc GetTransaction(Hash)returns (Response) {
    option (google.api.http) = {
      post: "/v1/GetTransaction"
      body: "*"
    };
  }
  rpc GetBlockByHash(Hash)returns (Response) {
    option (google.api.http) = {
      post: "/v1/GetBlockByHash"
      body: "*"
    };
  }
  rpc GetBlockByHeight(Height)returns (Response) {
    option (google.api.http) = {
      post: "/v1/GetBlockByHeight"
      body: "*"
    };
  }
  rpc GetPoolTxs(Null)returns (Response) {
    option (google.api.http) = {
      post: "/v1/GetPoolTxs"
      body: "*"
    };
  }
  rpc GetLastHeight(Null)returns (Response) {
    option (google.api.http) = {
      post: "/v1/GetLastHeight"
      body: "*"
    };
  }
  rpc GetContract(Address)returns (Response) {
    option (google.api.http) = {
      post: "/v1/GetContract"
      body: "*"
    };
  }
  rpc GetConfirmedHeight(Null)returns (Response) {
    option (google.api.http) = {
      post: "/v1/GetConfirmedHeight"
      body: "*"
    };
  }
  rpc Peers(Null)returns (Response) {
    option (google.api.http) = {
      post: "/v1/Peers"
      body: "*"
    };
  }
  rpc NodeInfo(Null)returns (Response) {
    option (google.api.http) = {
      post: "/v1/NodeInfo"
      body: "*"
    };
  }
  rpc GetExchangePairs(Address)returns (Response){
    option (google.api.http) = {
      post: "/v1/GetExchangePairs"
      body: "*"
    };
  }
}

// The request message containing the user's name.
message Bytes {
  bytes bytes = 1;
}

message Address{
  string address = 1;
}

message Hash{
  string hash = 1;
}

message Height{
 uint64 height = 1;
}

message Null{
}




// The response message containing the greetings
message Response {
  int32 code = 1;
  bytes result = 2;
  string err = 3;
}
